[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drfsc"
version = "0.0.2"
authors = [
  { name="Mark Chiu Chong", email="mark.chiuchong@gmail.com"},
]
description = "A Python package implementing a distributed randomised feature selection algorithm."
readme = "README.md"
requires-python = ">=3.9.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/markcc309/drfsc"
"Documentation" = "https://markcc309.github.io/drfsc/"